<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@dimen/BMI_HISTORY_BORDERS">

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline3"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3"/>
    <TextView
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/historyMass"
            app:layout_constraintVertical_bias="0.2"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"
            tools:text="@string/BMI_HISTORY_SAMPLE_MASS"
            android:textSize="15sp"
            android:textAlignment="textStart"/>
    <TextView
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:id="@+id/historyHeight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/historyMass"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"
            app:layout_constraintHorizontal_bias="0.0"
            tools:text="@string/BMI_HISTORY_SAMPLE_HEIGHT"
            android:textSize="15sp"
            android:textAlignment="textStart"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.7"/>
    <TextView
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/historyBmiValue"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:textSize="23sp"
            tools:text="@string/BMI_HISTORY_SAMPLE_VALUE"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toBottomOf="@+id/historyBmi"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"/>
    <TextView
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            android:id="@+id/historyBmi"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            tools:text="@string/BMI_BMITEXT"
            android:textSize="20sp"
            android:textAlignment="center" android:text="@string/BMI_BMITEXT"/>
    <TextView
            android:layout_width="@dimen/BMI_WIDTH_MATCH"
            android:layout_height="wrap_content"
            android:id="@+id/historyDate"
            android:textSize="12sp"
            tools:text="@string/BMI_SAMPLE_DATE"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/historyImage"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="@dimen/BMI_HISTORY_IMAGE_RES"
            android:layout_height="@dimen/BMI_HISTORY_IMAGE_RES"
            tools:srcCompat="@tools:sample/avatars[2]"
            android:id="@+id/historyImage"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            android:layout_marginStart="@dimen/BMI_MARGIN_START"
            android:layout_marginTop="@dimen/BMI_MARGIN_TOP"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/BMI_MARGIN_BOTTOM"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/BMI_MARGIN_END"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/BMI_HISTORY_IMAGE_DESC"/>

</android.support.constraint.ConstraintLayout>